--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
+#todo add beer-inventory-service-host localhost port
 spring.datasource.initialization-mode=EMBEDDED
+spring.cache.jcache.config=classpath:ehcache.xml 
