--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #todo add beer-inventory-service-host localhost port
 spring.datasource.initialization-mode=EMBEDDED
-spring.cache.jcache.config=classpath:ehcache.xml 
+spring.cache.jcache.config=classpath:ehcache.xml
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+spring.h2.console.enabled=true 
