--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.h2.console.enabled=true 
 
 spring.artemis.user=artemis
-spring.artemis.password=simetraehcapa 
+spring.artemis.password=simetraehcapa
+
+logging.level.guru.springframework=debug
