--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
             <artifactId>artemis-jms-server</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
