Spring Cloud Commit v1
Adding Client based on https://springframework.guru/ tutorial

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=beerservice
 #todo add beer-inventory-service-host localhost port
 spring.datasource.initialization-mode=EMBEDDED
 spring.cache.jcache.config=classpath:ehcache.xml
